--- a/home.css
+++ b/home.css
@@ -60,7 +60,6 @@
 
 .pl-14 {
   padding-left: 140px;
-  margin: 0px;
 }
 
 .text-b-36 {
@@ -77,6 +76,7 @@
 
 #main {
   background-color: #F1F3FF;
+  padding-top: 60px;
 }
 
 .main-text-container{
@@ -175,6 +175,11 @@
 
 #testimonial {
   padding-bottom: 100px;
+}
+
+.testimonial-image {
+  width: 80px;
+  height: 80px;
 }
 
 .star{
@@ -288,6 +293,9 @@
       margin-right: 16px;
     }
 
+    #main {
+      padding-top: 0px;
+    }
     .main-img-container {
       height: 300px;
     }
